# Dynamissa

./: CMakeLists.txt  LICENSE  README.md
include/: dynamissa.hpp  header.hpp  renderer.hpp  simulation.hpp  structures.hpp  ui.hpp
src/: dynamissa.cpp  main.cpp  renderer.cpp  simulation.cpp  ui.cpp
